--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body {
 </div>
 
 <div style="padding-left:16px">
-  <h2>Top Navigation Example</h2>
+  <h2>Gluessel Human Practices</h2>
   <p>Some content..</p>
 </div>
 
