--- a/index.html
+++ b/index.html
@@ -18,6 +18,33 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-3">
         <div class="container">
             <a href="#" class="navbar-brand">Gluessel</a>
+            <button
+                type="button"
+                class="navbar-toggler"
+                data-bs-target="$navbarNav"
+                data-bs-toggler="collapse"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle Navbar"
+
+
+            >
+                <span class="navbar-toggle-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link text-white">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link text-white">Interviews</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link text-white">Pivots</a>
+                    </li>
+                </ul>
+
+            </div>
         </div>
     </nav>
 
