--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <span class="navbar-toggle-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="mx-auto"></div>
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a href="#" class="nav-link text-white">Home</a>
