--- a/index.html
+++ b/index.html
@@ -76,7 +76,18 @@
         </div>
     </div>
 
-    
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script>
+        var nav=document.querySelector('nav');
+
+        window.addEventListener("Scroll",function(){
+            if(window.pageYOffset>100){
+                nav.classList.add("bg-dark","shadow");
+            }else{
+                nav.classList.remove("bg-dark","shadow")
+            }
+        });
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
