--- a/index.html
+++ b/index.html
@@ -38,11 +38,18 @@
                         <a href="#" class="nav-link text-white">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-white">Interviews</a>
+                        <a href="#" class="nav-link text-white">Project Description</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-white">Pivots</a>
+                        <a href="#" class="nav-link text-white">Attribution</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link text-white">Human Practices</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link text-white">Comparison</a>
+                    </li>
+                
                 </ul>
 
             </div>
